# lazy-nlp-pipeline

./: BasicUsage.ipynb  Example.ipynb  LICENSE  README.md  lazy_nlp_pipeline.py  pyproject.toml
src/lazy_nlp_pipeline/: __init__.py  base_classes.py  doc.py  lazy_nlp_pipeline.py  nlp.py  patterns.py  tokenizer.py  words_analyzer.py
src/lazy_nlp_pipeline/read/: common_crawl.py
tests/: test_main.py  test_patterns.py  test_readme.py  test_words.py
