[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazy-nlp-pipeline"
version = "0.0.4"
authors = [{ name = "Alex", email = "alex3.14mart@gmail.com" }]
description = "Natural Language Processing lib inspired by Spacy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pymorphy3",
    "pymorphy3-dicts-uk",
    "spacy",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/Alex314/lazy-nlp-pipeline"
"Bug Tracker" = "https://github.com/Alex314/lazy-nlp-pipeline/issues"

[tool.hatch.envs.test]
type = "container"

[tool.hatch.envs.test.scripts]
test = "python -m unittest tests/test_* -v"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]

[[tool.mypy.overrides]]
module = [
    'pymorphy3.*',
    'warcio.*'
]
ignore_missing_imports = true
# TODO: generate stubs
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
